--- a/css/style.css
+++ b/css/style.css
@@ -259,9 +259,11 @@ span {
     margin: 2rem 0 1rem;
 }
 
-.competences-box p {
+.competences-box img {
     font-size: 2rem;
     margin: 1rem 0 3rem;
+    max-width: 100%;
+    height: auto;
 }
 
 .portfolio {
